<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clipChildren="false"
        android:layout_gravity="center"
        android:id="@+id/ll_cross_banner_container">

        <com.mediamain.android.view.FoxStreamerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sv_cross_banner"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <TextView
        style="@style/layout_bt"
        android:text="@string/on_the_top"
        android:background="@color/yellow"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tv_cross_banner_top"/>

    <TextView
        style="@style/layout_bt"
        android:text="@string/on_the_left"
        android:background="@color/yellow"
        android:layout_gravity="center_vertical"
        android:id="@+id/tv_cross_banner_left"/>

    <TextView
        style="@style/layout_bt"
        android:text="@string/on_the_right"
        android:background="@color/yellow"
        android:layout_gravity="center_vertical|end"
        android:id="@+id/tv_cross_banner_right"/>

    <TextView
        style="@style/layout_bt"
        android:text="@string/on_the_bottom"
        android:background="@color/yellow"
        android:layout_gravity="center_horizontal|bottom"
        android:id="@+id/tv_cross_banner_bottom"/>
</FrameLayout>